web.config variable update

--- a/PageRedirect.Aspx/Web.config
+++ b/PageRedirect.Aspx/Web.config
@@ -9,11 +9,11 @@
     <add key="ShowButtons" value="false" />
     <add key="RedirectTo" value="./DestinationOne.html, ./DestinationTwo.html"/>
     <add key="RedirectToPageNames" value="DestinationOne, DestinationTwo"/>
-    <add key="ParameterForUsername" value="userId"/>
+    <add key="ParameterForUsername" value="?userId"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.8"/>
-    <httpRuntime targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.7"/>
+    <httpRuntime targetFramework="4.7"/>
     <authentication mode="Windows" />    
   </system.web>
   <system.codedom>
